# loan_approval_analysis

./: loan_prediction.pkl  main.ipynb  pyproject.toml
